hcc/tests/conform/errors/parse/missing_semicolon.hc
//@ error: expected `;`
#include <stdlib.hh>
U0 Main()
{
  I64 x = 1
}
